Fixed resource page list title wrap problem

--- a/public/stylesheets/sass/themes/genomedynamics/genomedynamics.sass
+++ b/public/stylesheets/sass/themes/genomedynamics/genomedynamics.sass
@@ -719,3 +719,7 @@ a.more, ul.more a
   .action_menu_header_right a
     color: #fff
     font-weight: normal
+    
+// custom accordion styles
+.accordion_name
+  width: 80%
